Close to 2 hours. Tomorrow, i will learn how to generate code.

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -7,6 +7,10 @@
         <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <packaging>pom</packaging>
+    <modules>
+        <module>service-acl</module>
+    </modules>
     <modelVersion>4.0.0</modelVersion>
     <description>微服务模块</description>
 
@@ -45,10 +49,10 @@
         </dependency>
 
         <!-- 服务注册 -->
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
+<!--        </dependency>-->
 
         <!-- 服务调用feign -->
         <dependency>
