想放弃这个项目（CURD没营养，其他基本和谷粒商城类似）-目前进展到代码生成器

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>service-acl</module>
+        <module>service-sys</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
     <description>微服务模块</description>
