--- a/common/service-util/pom.xml
+++ b/common/service-util/pom.xml
@@ -38,12 +38,33 @@
             <version>3.11.2</version>
         </dependency>
 
-        <!--mybatis-plus-->
+        <!--        MP Begin-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.4.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+            <version>2.3</version>
+        </dependency>
+
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <!--mysql-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--MP End-->
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>model</artifactId>
